--- a/practice/js/Module-35-36-37/index.html
+++ b/practice/js/Module-35-36-37/index.html
@@ -5,13 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bom</title>
+    <title>Simple Modal</title>
+    <style>
+        button {}
+    </style>
 </head>
 
 <body>
+    <button onclick="modalBtn()">modal</button>
+    <button onclick="promtBtn()">promt modal</button>
+    <button onclick="askBtn()">ask something</button>
     <h1>hi</h1>
+    <div id="name">
 
-    <script src="js/interval.js"></script>
+    </div>
+
+
+    <!-- <script src="js/interval.js"></script> -->
+    <!-- <script src="js/promt.js"></script> -->
+    <script src="js/confirm.js"></script>
 </body>
 
 </html>
